# twitter-rust-api

./: Cargo.toml
migrations/2024-01-11-133843_create_user/: up.sql
migrations/2024-01-12-065519_create_posts/: up.sql
src/: extractor.rs  main.rs  postgres_connect.rs  schema.rs  utils.rs
src/endpoints/: create_post.rs  create_user.rs  get_user.rs  get_user_posts.rs  mod.rs
src/models/: post.rs  user.rs
