[package]
name = "twitter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.3",features=["macros"]}
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
diesel = { version = "2.1.0", features = ["postgres","chrono","r2d2"] }
dotenvy = "0.15"
serde_json = "1.0.111"
chrono = {version="0.4.31",features=["serde"]}
serde = {version="1.0.195",features=["derive"]}
sha2 = "0.10.8"
